--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,90 +8,142 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="main.css">
+
+
+<script>	
+function validateForm() {
+  var x = document.forms["contactReq"]["fname"].value;
+  if (x == "") {
+    alert("Name must be filled out");
+    return false;
+  }
+} 
+</script>	
+
+	<script>
+	function passvalues()
+	{
+		//var firstname = document.getElementsByName("fname").value;
+		var firstname = document.forms["contactReq"]["fname"].value;
+		var emailreq = document.forms["contactReq"]["email"].value;
+		localStorage.setItem("namevalue", firstname);
+		localStorage.setItem("emailvalue", emailreq);
+		return false;
+		
+		
+	}
+	
+	</script>
+	
+	
 <title>Simple Software Solutions</title>
 </head>
 <body>
+	<!-- Navbar using bootstrap-->
+	<!-- First calling the navbar class from bootstrap with dark colour -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logo Image2.png" width="auto" height="auto" alt="CompanyLogo"/></a>
+	<!-- Adding in the logo to the navbar with a predetermined width and height -->
+  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a>
+	  <!-- Defining the buttons on the navbar -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		 <!-- First button is Home -->
         <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
+		  <!-- second button shows previous projects -->
         <li class="nav-item"> <a class="nav-link" href="PrevProj.html">Previous Projects</a> </li>
-        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="Whatwedo.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
+		  <!-- Dropdown list with two buttons -->
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="SoftSol.html">Software Solutions</a></li>
-            <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>
-            <!--<li><hr class="dropdown-divider"></li> -->
-            
-          </ul>
+            <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>            
+          </ul> <!-- Closes the list of dropdowns on navbar -->
         </li>
+		  <!-- disabled button for future features -->
         <li class="nav-item"> <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon - Pricing</a> </li>
+		  <!-- Button linking to FAQ page -->
         <li class="nav-item"> <a class="nav-link" href="FAQ.html">FAQ</a> </li>
-      </ul>
+      </ul> <!-- Closing the list of buttons on the navbar -->
     </div>
   </div>
 </nav>
+	<!-- Creating a container to center the page in a browser -->
 <div class="container">
+	<!-- Rotating image carousel -->
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
+		<!-- First image in the carousel - This code can be pasted for as many images are wanted -->
       <div class="carousel-item active"> <img src="../Images/placeholder2.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
+		<!-- Second image in the carousel, same code different image -->
       <div class="carousel-item"> <img src="../Images/placeholder3.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
+		<!-- Third image in the carousel -->
       <div class="carousel-item"> <img src="../Images/placeholder4.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
     </div>
   </div>
+	<!-- Basic header to introduce homepage -->
   <h1>Simple Software Solutions</h1>
+	<!-- paragraph of information -->
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+	<!-- Placeholder image in the centre of the screen -->
   <img src="../Images/placeholder.png" class="rounded mx-auto d-block" alt="A placeholder image" height="250" width="250">
   <h3> Some information about us!</h3>
-  <div class="accordion" id="accordionExample">
+	<!-- Bootstrap accordion table with information about company -->
+	<!-- Creating the accordian table, giving it the id CompanyInfo -->
+  <div class="accordion" id="accordionCompanyInfo">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
+		  <!-- will allow user to hide text they don't wish to see or show text that they do -->
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Who are we? </button>
       </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionCompanyInfo">
         <div class="accordion-body"> <strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum. </div>
       </div>
     </div>
+	  <!-- Same code as before, changed the titles -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Where are we based? </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionCompanyInfo">
         <div class="accordion-body"> <strong>Pellentesque habitant morbi tristique senectus et netus</strong> et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum. </div>
       </div>
     </div>
+	  
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Any Third Item </button>
       </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionCompanyInfo">
         <div class="accordion-body"> <strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum. </div>
       </div>
     </div>
   </div>
+	<!-- Contact request form --> 
   <h3>Want to contact us?</h3>
-  <i class="bi bi-chat-left-text"></i>
-  <form class="row g-3" >
+  <!--<i class="bi bi-chat-left-text"></i> -->
+  <form name ="contactReq" action="DataRecieved.html" class="row g-3" onsubmit="return validateForm()"   >
+	
     <div class="col-md-3">
-      <label for="inputForename" class="form-label">First Name</label>
-      <input type="forename" class="form-control" id="inputForename1" required>
+     <label for="inputForename" class="form-label">First Name</label> 
+      <input type="text" name ="fname" id="inputForename" class="form-control"  >
     </div>
     <div class="col-md-3">
-      <label for="inputSurname1" class="form-label">Surname</label>
-      <input type="surname" class="form-control" id="inputSurname1" placeholder="(optional)" >
+      <label for="inputSurname" class="form-label">Surname</label>
+      <input type="text" class="form-control" id="inputSurname" placeholder="(optional)" >
     </div>
     <div class="col-6">
-      <label for="inputemail" class="form-label">Email Address</label>
-      <input type="email" class="form-control" id="inputEmail" placeholder="johndoe@email.com" required>
+      <label for="inputEmail" class="form-label">Email Address</label>
+      <input type="email" class="form-control" id="inputEmail" name ="email" placeholder="johndoe@email.com" >
     </div>
     <div class="col-12">
       <label for="inputEnquiry" class="form-label">Reason for enquiry?</label>
-      <input type="text" class="form-control" id="inputEnquiry" placeholder="Pricing, Further information, etc" required>
+      <input type="text" class="form-control" id="inputEnquiry" placeholder="Pricing, Further information, etc" >
     </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary">Submit Contact Request</button>
+	  
+    <div class="col-12">		
+      <button type="submit" class="btn btn-primary" value="Click" onClick="passvalues();">Submit Contact Request</button>
     </div>
+	  
   </form>
 </div>
 
