--- a/Pages/NotFound.html
+++ b/Pages/NotFound.html
@@ -11,28 +11,36 @@
 <title>Simple Software Solutions</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+  <!-- Adding in the logo to the navbar with a predetermined width and height -->
+  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a> 
+    <!-- Defining the buttons on the navbar -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- First button is Home -->
         <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
+        <!-- second button shows previous projects -->
         <li class="nav-item"> <a class="nav-link" href="PrevProj.html">Previous Projects</a> </li>
+        <!-- Dropdown list with two buttons -->
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="softsol.html">Software Solutions</a></li>
-            <li><a class="dropdown-item" href="webdes.html">Website Design</a></li>
-            <!--<li><hr class="dropdown-divider"></li> -->
-            
+            <li><a class="dropdown-item" href="SoftSol.html">Software Solutions</a></li>
+            <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>
           </ul>
+          <!-- Closes the list of dropdowns on navbar --> 
         </li>
+        <!-- disabled button for future features -->
         <li class="nav-item"> <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon - Pricing</a> </li>
+        <!-- Button linking to FAQ page -->
         <li class="nav-item"> <a class="nav-link" href="FAQ.html">FAQ</a> </li>
       </ul>
+      <!-- Closing the list of buttons on the navbar --> 
     </div>
   </div>
 </nav>
 <div class="container">
+	<!-- centering the page -->
   <h1>This page is currently undergoing maintenence</h1>
   <p>Please check back at a later date. We are sorry for any inconvenience.</p>
   <img src="../Images/Maintenance.png" class="rounded mx-auto d-block" alt="A placeholder image" height="250" width="350"> </div>
