--- a/Pages/PrevProj.html
+++ b/Pages/PrevProj.html
@@ -8,40 +8,48 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="main.css">
-	<!-- Link to gallery CSS from https://sachinchoolur.github.io/lightgallery.js/docs/ -->	
-<link rel="stylesheet" href="css/lightgallery.css">	
+<!-- Link to gallery CSS from https://sachinchoolur.github.io/lightgallery.js/docs/ -->
+<link rel="stylesheet" href="css/lightgallery.css">
 <title>Simple Software Solutions</title>
 </head>
 <body>
-	<!-- linking to javascript from lightgallery -->
-	<script src="js/lightgallery.min.js"></script>
-	<!-- lightgallery plugins -->
-    <script src="js/lg-thumbnail.min.js"></script>
-    <script src="js/lg-fullscreen.min.js"></script>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a>
+<!-- linking to javascript from lightgallery --> 
+<script src="js/lightgallery.min.js"></script> 
+<!-- lightgallery plugins --> 
+<script src="js/lg-thumbnail.min.js"></script> 
+<script src="js/lg-fullscreen.min.js"></script> 
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+  <!-- Adding in the logo to the navbar with a predetermined width and height -->
+  <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a> 
+    <!-- Defining the buttons on the navbar -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- First button is Home -->
         <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
+        <!-- second button shows previous projects -->
         <li class="nav-item"> <a class="nav-link" href="PrevProj.html">Previous Projects</a> </li>
+        <!-- Dropdown list with two buttons -->
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="softsol.html">Software Solutions</a></li>
-            <li><a class="dropdown-item" href="webdes.html">Website Design</a></li>
-            <!--<li><hr class="dropdown-divider"></li> -->
-            
+            <li><a class="dropdown-item" href="SoftSol.html">Software Solutions</a></li>
+            <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>
           </ul>
+          <!-- Closes the list of dropdowns on navbar --> 
         </li>
+        <!-- disabled button for future features -->
         <li class="nav-item"> <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon - Pricing</a> </li>
+        <!-- Button linking to FAQ page -->
         <li class="nav-item"> <a class="nav-link" href="FAQ.html">FAQ</a> </li>
       </ul>
+      <!-- Closing the list of buttons on the navbar --> 
     </div>
   </div>
 </nav>
 <div class="container">
   <h1>Previous Projects</h1>
-<!-- Creating Cards to demonstate examples -->	
+  <!-- Creating Cards to demonstate examples -->
   <div class="row">
     <div class="col-sm">
       <div class="card" style="width: 18rem;">
@@ -73,28 +81,22 @@
   </div>
   <h3>You need it? We will make it.</h3>
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-	
   <h3>Here is a gallery of previous examples!</h3>
-	<div id="lightgallery">
-		    <a href="../Images/placeholder.png">
-        <img src="../Images/placeholder.png" width="250" height="250" alt="Coloured placeholder image">
-    </a>
-    <a href="../Images/placeholder2.png">
-        <img src="../Images/placeholder2.png" width="250" height="250" alt="Coloured placeholder image">
-    </a>
-     <a href="../Images/placeholder3.png">
-        <img src="../Images/placeholder3.png" width="250" height="250" alt="Coloured placeholder image">
-    </a>
-	 <a href="../Images/placeholder4.png">
-        <img src="../Images/placeholder4.png" width="250" height="250" alt="Coloured placeholder image">
-    </a>	
-		  
-<script>
+  <!-- Creating the gallery of images -->
+  <div id="lightgallery"> 
+    <!-- First image --> 
+    <a href="../Images/placeholder.png"> <img src="../Images/placeholder.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <!-- Second Image --> 
+    <a href="../Images/placeholder2.png"> <img src="../Images/placeholder2.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <!-- Third image --> 
+    <a href="../Images/placeholder3.png"> <img src="../Images/placeholder3.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <!-- Fourth Image --> 
+    <a href="../Images/placeholder4.png"> <img src="../Images/placeholder4.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <!-- Calling the javascript for lightgallery  --> 
+    <script>
         lightGallery(document.getElementById('lightgallery')); 
-</script>
-
-</div>
-	
+</script> 
+  </div>
 </div>
 
 <!-- Bootstrap Bundle with Popper --> 
