Placeholder Images replaced
New placeholder image, Gallery changed to photoshopped images, banner placeholders changed to rentable ad-space

--- a/Pages/PrevProj.html
+++ b/Pages/PrevProj.html
@@ -81,17 +81,17 @@
   </div>
   <h3>You need it? We will make it.</h3>
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-  <h3>Here is a gallery of previous examples!</h3>
-  <!-- Creating the gallery of images -->
+  <h3>We can also produce images in photoshop!</h3>
+  <!-- Creating the gallery of Photoshop images -->
   <div id="lightgallery"> 
     <!-- First image --> 
-    <a href="../Images/placeholder.png"> <img src="../Images/placeholder.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <a href="../Images/HedgeHog.png"> <img src="../Images/HedgeHog.png" width="300" height="250" alt="Coloured placeholder image"> </a> 
     <!-- Second Image --> 
-    <a href="../Images/placeholder2.png"> <img src="../Images/placeholder2.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <a href="../Images/ElephAnt.png"> <img src="../Images/ElephAnt.png" width="320" height="250" alt="Coloured placeholder image"> </a> 
     <!-- Third image --> 
-    <a href="../Images/placeholder3.png"> <img src="../Images/placeholder3.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <a href="../Images/Hotdog.jpg"> <img src="../Images/Hotdog.jpg" width="320" height="250" alt="Coloured placeholder image"> </a> 
     <!-- Fourth Image --> 
-    <a href="../Images/placeholder4.png"> <img src="../Images/placeholder4.png" width="250" height="250" alt="Coloured placeholder image"> </a> 
+    <a href="../Images/Roostake.jpg"> <img src="../Images/Roostake.jpg" width="320" height="250" alt="Coloured placeholder image"> </a> 
     <!-- Calling the javascript for lightgallery  --> 
     <script>
         lightGallery(document.getElementById('lightgallery')); 
