--- a/Pages/index.html
+++ b/Pages/index.html
@@ -45,31 +45,30 @@ function validateForm() {
   
   <div class="container-fluid"> <a class="navbar-brand" href="index.html"><img src="../Images/logoImage2.png" width="80" height="80" alt="CompanyLogo"/></a> 
     <!-- Defining the buttons on the navbar -->
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- First button is Home -->
-          <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
-          <!-- second button shows previous projects -->
-          <li class="nav-item"> <a class="nav-link" href="PrevProj.html">Previous Projects</a> </li>
-          <!-- Dropdown list with two buttons -->
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="SoftSol.html">Software Solutions</a></li>
-              <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>
-            </ul>
-            <!-- Closes the list of dropdowns on navbar --> 
-          </li>
-          <!-- disabled button for future features -->
-          <li class="nav-item"> <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon - Pricing</a> </li>
-          <!-- Button linking to FAQ page -->
-          <li class="nav-item"> <a class="nav-link" href="FAQ.html">FAQ</a> </li>
-        </ul>
-        <!-- Closing the list of buttons on the navbar --> 
-      </div>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- First button is Home -->
+        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="index.html">Home</a> </li>
+        <!-- second button shows previous projects -->
+        <li class="nav-item"> <a class="nav-link" href="PrevProj.html">Previous Projects</a> </li>
+        <!-- Dropdown list with two buttons -->
+        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> What We Do </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="SoftSol.html">Software Solutions</a></li>
+            <li><a class="dropdown-item" href="WebDes.html">Website Design</a></li>
+          </ul>
+          <!-- Closes the list of dropdowns on navbar --> 
+        </li>
+        <!-- disabled button for future features -->
+        <li class="nav-item"> <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon - Pricing</a> </li>
+        <!-- Button linking to FAQ page -->
+        <li class="nav-item"> <a class="nav-link" href="FAQ.html">FAQ</a> </li>
+      </ul>
+      <!-- Closing the list of buttons on the navbar --> 
     </div>
-  
+  </div>
 </nav>
 <!-- Creating a container to center the page in a browser -->
 <div class="container"> 
@@ -77,11 +76,11 @@ function validateForm() {
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner"> 
       <!-- First image in the carousel - This code can be pasted for as many images are wanted -->
-      <div class="carousel-item active"> <img src="../Images/placeholder2.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
+      <div class="carousel-item active"> <img src="../Images/Adspace1.png" class="d-block w-100" alt="..." > </div>
       <!-- Second image in the carousel, same code different image -->
-      <div class="carousel-item"> <img src="../Images/placeholder3.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
+      <div class="carousel-item"> <img src="../Images/Adspace2.png" class="d-block w-100" alt="..." > </div>
       <!-- Third image in the carousel -->
-      <div class="carousel-item"> <img src="../Images/placeholder4.png" class="d-block w-100" alt="..." height="250" width="250"> </div>
+      <div class="carousel-item"> <img src="../Images/Adspace3.png" class="d-block w-100" alt="..." > </div>
     </div>
   </div>
   <!-- Basic heading to introduce homepage -->
@@ -89,12 +88,12 @@ function validateForm() {
   <!-- paragraph of information -->
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
   <!-- Placeholder image in the centre of the screen --> 
-  <img src="../Images/placeholder.png" class="rounded mx-auto d-block" alt="A placeholder image" height="250" width="250">
+  <img src="../Images/Software.png" class="rounded mx-auto d-block" alt="A placeholder image" height="250" width="250">
   <h3> Some information about us!</h3>
   <!-- Bootstrap accordion table with information about company --> 
   <!-- Creating the accordian table, giving it the id CompanyInfo -->
-  <div class="accordion" id="accordionCompanyInfo">
-	<!-- Item one -->
+  <div class="accordion" id="accordionCompanyInfo"> 
+    <!-- Item one -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne"> 
         <!-- will allow user to hide text they don't wish to see or show text that they do -->
@@ -113,7 +112,7 @@ function validateForm() {
         <div class="accordion-body"> <strong>Pellentesque habitant morbi tristique senectus et netus</strong> et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum. </div>
       </div>
     </div>
-	<!-- Item three -->
+    <!-- Item three -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Any Third Item </button>
@@ -127,27 +126,27 @@ function validateForm() {
   <h3>Want to contact us?</h3>
   <!-- Form named contactReq will send data to DataRecieved and validate the form using validateForm() function -->
   <form name ="contactReq" action="DataRecieved.html" class="row g-3" onsubmit="return validateForm()">
-	  <!-- Firstname -->
+    <!-- Firstname -->
     <div class="col-md-3">
       <label for="inputForename" class="form-label">First Name</label>
       <input type="text" name ="fname" id="inputForename" class="form-control"  >
     </div>
-	  <!-- Surname -->
+    <!-- Surname -->
     <div class="col-md-3">
       <label for="inputSurname" class="form-label">Surname</label>
       <input type="text" class="form-control" id="inputSurname" placeholder="(optional)" >
     </div>
-	  <!-- Email address -->
+    <!-- Email address -->
     <div class="col-6">
       <label for="inputEmail" class="form-label">Email Address</label>
       <input type="email" class="form-control" id="inputEmail" name ="email" placeholder="johndoe@email.com" >
     </div>
-	  <!-- Reason -->
+    <!-- Reason -->
     <div class="col-12">
       <label for="inputEnquiry" class="form-label">Reason for enquiry?</label>
       <input type="text" class="form-control" id="inputEnquiry" placeholder="Pricing, Further information, etc" >
     </div>
-	  <!-- Submit button -->
+    <!-- Submit button -->
     <div class="col-12"> 
       <!-- submit button will call passvalues() function when clicked -->
       <button type="submit" class="btn btn-primary" value="Click" onClick="passvalues();">Submit Contact Request</button>
